--- a/index.html
+++ b/index.html
@@ -3,8 +3,67 @@
   <head>
     <meta charset="utf-8">
     <title>Data Dashboard</title>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <nav>
+      <img src="assets/images/logo.png" alt="">
+      <p>correo@example.com</p>
+      <i class="fa fa-bars" aria-hidden="true"></i>
+    </nav>
+    <section id="lateral_bar"> <!--barra lateral-->
+      <div class="box1">
+        <h2>CEDES</h2>
+      </div>
+      <div class="box2">
+        <ul>
+          <li><p>Santiago de Chile</p></li>
+          <li><p>Lima</p></li>
+          <li><p>Arequipa</p></li>
+          <li><p>Ciudad de México</p></li>
+        </ul>
+      </div>
+      <div class="box3">
+        <h2>GENERATIONS</h2>
+      </div>
+      <div class="box4">
+        <ul>
+          <li><button type="button" name="button"></button><p>2017</p></li>
+          <li><button type="button" name="button"></button><p>2016</p></li>
+          <li><button type="button" name="button"></button><p>2015</p></li>
+          <li><button type="button" name="button"></button><p>2014</p></li>
+        </ul>
+      </div>
+      <div class="box5"> <!--menú desplegable-->
+        <h2>TEACHERS</h2>
+      </div>
+    </section>
+    <section> <!--sección graficos alumnas-->
+      <div class="graphic1">
+        <!--podemos poder imágenes de gráficos o gráficos reales-->
+      </div>
+      <div class="graphic2">
+        <!--podemos poder imágenes de gráficos o gráficos reales-->
+      </div>
+      <div class="graphic3">
+        <!--podemos poder imágenes de gráficos o gráficos reales-->
+      </div>
+    </section>
+    <section> <!--sección sprint-->
+      <div class="notes"><!--notas sprint-->
+        <!--imagen-->
+      </div>
+      <div class="tec"><!--porcentajes técnicos-->
+        <!--imagen-->
+      </div>
+      <div class="satis"><!--porcentaje satisfacción-->
+        <!--imagen-->
+      </div>
+    </section>
+    <section><!--sección profesores/jedi masters-->
+
+    </section>
 
 		<!-- Base de datos -->
 		<script src="./js/data.js"></script>
