--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <section id="lateral_bar"> <!--barra lateral-->
       <div class="box1">
-        <h2>CEDES</h2>
+        <h2>SEDES</h2>
       </div>
       <div class="box2">
         <ul>
@@ -29,39 +29,42 @@
       </div>
       <div class="box4">
         <ul>
-          <li><button type="button" name="button"></button><p>2017</p></li>
-          <li><button type="button" name="button"></button><p>2016</p></li>
-          <li><button type="button" name="button"></button><p>2015</p></li>
-          <li><button type="button" name="button"></button><p>2014</p></li>
+          <li><p>2017</p></li>
+          <li><p>2016</p></li>
+          <li><p>2015</p></li>
+          <li><p>2014</p></li>
         </ul>
       </div>
       <div class="box5"> <!--menú desplegable-->
         <h2>TEACHERS</h2>
       </div>
     </section>
-    <section> <!--sección graficos alumnas-->
+    <section id="firts_info"> <!--sección graficos alumnas-->
       <div class="graphic1">
+        <h2>ENROLLMENT</h2>
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
       <div class="graphic2">
+        <h2>ACHIEVEMENT</h2>
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
       <div class="graphic3">
+        <h2>NET PROMOTER SCORE</h2>
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
     </section>
-    <section> <!--sección sprint-->
+    <section id="second_info"> <!--sección sprint-->
       <div class="notes"><!--notas sprint-->
         <!--imagen-->
       </div>
       <div class="tec"><!--porcentajes técnicos-->
         <!--imagen-->
       </div>
-      <div class="satis"><!--porcentaje satisfacción-->
+      <div class="satisfaction"><!--porcentaje satisfacción-->
         <!--imagen-->
       </div>
     </section>
-    <section><!--sección profesores/jedi masters-->
+    <section id="last_info"><!--sección profesores/jedi masters-->
 
     </section>
 
