agregando cosas al html

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     </nav>
     <section id="lateral_bar"> <!--barra lateral-->
       <div class="box1">
-        <h2>SEDES</h2>
+        <h2>VENUES</h2>
       </div>
       <div class="box2">
         <ul>
-          <li><p>Santiago de Chile</p></li>
-          <li><p>Lima</p></li>
-          <li><p>Arequipa</p></li>
-          <li><p>Ciudad de México</p></li>
+          <li><input type="checkbox"><p>Santiago de Chile</p></li>
+          <li><input type="checkbox"><p>Lima</p></li>
+          <li><input type="checkbox"><p>Arequipa</p></li>
+          <li><input type="checkbox"><p>Ciudad de México</p></li>
         </ul>
       </div>
       <div class="box3">
@@ -29,10 +29,10 @@
       </div>
       <div class="box4">
         <ul>
-          <li><p>2017</p></li>
-          <li><p>2016</p></li>
-          <li><p>2015</p></li>
-          <li><p>2014</p></li>
+          <li><input type="checkbox"><p>2017</p></li>
+          <li><input type="checkbox"><p>2016</p></li>
+          <li><input type="checkbox"><p>2015</p></li>
+          <li><input type="checkbox"><p>2014</p></li>
         </ul>
       </div>
       <div class="box5"> <!--menú desplegable-->
@@ -65,6 +65,9 @@
       </div>
     </section>
     <section id="last_info"><!--sección profesores/jedi masters-->
+      <div class="cont">
+        <!--div que contenga info sobre profesores-->
+      </div>
 
     </section>
 
