--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <title>Data Dashboard</title>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Doppio+One" rel="stylesheet">
   </head>
   <body>
-    <nav>
+    <nav> <!--Encabezado-->
       <img src="assets/images/logo.png" alt="">
-      <p>correo@example.com</p>
+      <p class="correo"> correo@example.com</p>
       <i class="fa fa-bars" aria-hidden="true"></i>
     </nav>
+
+
+
     <section id="lateral_bar"> <!--barra lateral-->
       <div class="box1">
         <h2>CEDES</h2>
