--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
   <body>
     <nav> <!--Encabezado-->
       <img src="assets/images/logo.png" alt="">
+      <button type="button" name="button"><i class="fa fa-bars" aria-hidden="true"></i></button>
       <p class="correo"> correo@example.com</p>
-      <i class="fa fa-bars" aria-hidden="true"></i>
     </nav>
-
-
 
     <section id="lateral_bar"> <!--barra lateral-->
       <div class="box1">
@@ -43,6 +41,7 @@
         <h2>TEACHERS</h2>
       </div>
     </section>
+
     <section id="firts_info"> <!--sección graficos alumnas-->
       <div class="graphic1">
         <h2>ENROLLMENT</h2>
@@ -57,6 +56,7 @@
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
     </section>
+
     <section id="second_info"> <!--sección sprint-->
       <div class="notes"><!--notas sprint-->
         <!--imagen-->
@@ -68,6 +68,7 @@
         <!--imagen-->
       </div>
     </section>
+
     <section id="last_info"><!--sección profesores/jedi masters-->
       <div class="cont">
         <!--div que contenga info sobre profesores-->
