--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <nav> <!--Encabezado-->
       <img src="assets/images/logo.png" alt="">
+      <list>
       <p class="correo"> correo@example.com</p>
       <i class="fa fa-bars" aria-hidden="true"></i>
+    </list>
     </nav>
 
 
