posicionamiento de los divs de informacion mas las imagenes de los graficos

--- a/index.html
+++ b/index.html
@@ -45,27 +45,30 @@
     <section id="firts_info"> <!--sección graficos alumnas-->
       <div class="graphic1">
         <h2>ENROLLMENT</h2>
+        <img src="assets/images/bar-graph.png">
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
       <div class="graphic2">
         <h2>ACHIEVEMENT</h2>
+        <img src="assets/images/bar-graph.png">>
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
       <div class="graphic3">
         <h2>NET PROMOTER SCORE</h2>
+        <img src="assets/images/bar-graph.png">>
         <!--podemos poder imágenes de gráficos o gráficos reales-->
       </div>
     </section>
 
     <section id="second_info"> <!--sección sprint-->
       <div class="notes"><!--notas sprint-->
-        <!--imagen-->
+        <img src="assets/images/rectangular-graphic.png"><!--imagen-->
       </div>
       <div class="tec"><!--porcentajes técnicos-->
-        <!--imagen-->
+        <img src="assets/images/circle-graphic.png"><!--imagen-->
       </div>
       <div class="satisfaction"><!--porcentaje satisfacción-->
-        <!--imagen-->
+        <img src="assets/images/graph.png"><!--imagen-->
       </div>
     </section>
 
