modificando barra lateral ultimos detalles

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       </div>
       <div class="box4">
         <ul>
-          <li><input type="checkbox"><p>2017</p></li>
-          <li><input type="checkbox"><p>2016</p></li>
-          <li><input type="checkbox"><p>2015</p></li>
-          <li><input type="checkbox"><p>2014</p></li>
+          <li><input type="checkbox"><p>2017</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
+          <li><input type="checkbox"><p>2016</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
+          <li><input type="checkbox"><p>2015</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
+          <li><input type="checkbox"><p>2014</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
         </ul>
       </div>
       <div class="box5"> <!--menú desplegable-->
-        <h2>TEACHERS</h2>
+        <h2>TEACHERS</h2><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button>
       </div>
     </section>
 
