--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section id="lateral_bar"> <!--barra lateral-->
       <div class="box1">
-        <h2>VENUES</h2>
+        <h2>HEADQUARTERS</h2>
       </div>
       <div class="box2">
         <ul>
@@ -30,16 +30,24 @@
         <h2>GENERATIONS</h2>
       </div>
       <div class="box4">
-        <ul>
-          <li><input type="checkbox"><p>2017</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
-          <li><input type="checkbox"><p>2016</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
-          <li><input type="checkbox"><p>2015</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
-          <li><input type="checkbox"><p>2014</p><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button></li>
+        <select>
+           <option value="2017">2017</option>
+           <option value="2016">2016</option>
+           <option value="2015">2015</option>
+           <option value="2014">2014</option>
+        </select>
+      </div>
+      <div class="box5">
+        <h2>TEACHERS</h2><button id="btn" type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button>
+      </div>
+      <nav id="opcs-menu" class="disabled-menu"> <!--menú desplegable-->
+        <ul id="list">
+          <li><a href="#" class="names">Allison</a></li>
+          <li><a href="#" class="names">Belén</a></li>
+          <li><a href="#" class="names">Fabián</a></li>
+          <li><a href="#" class="names">Marcia</a></li>
         </ul>
-      </div>
-      <div class="box5"> <!--menú desplegable-->
-        <h2>TEACHERS</h2><button type="button"><i class="fa fa-sort-desc" aria-hidden="true"></i></button>
-      </div>
+      </nav>
     </section>
 
     <section id="firts_info"> <!--sección graficos alumnas-->
