--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     </aside>
 
-    <h1>OVERVIEW</h1>
-    <h1 class="student">STUDENT</h1>
+    <a class="tittle" href="#"><h1>OVERVIEW</h1></a>
+    <a class="tittle" href="html/student.html"><h1 class="student">STUDENT</h1></a>
     <hr>
 
     <section id="firts_info"> <!--sección graficos-->
