--- a/html/student.html
+++ b/html/student.html
@@ -32,10 +32,14 @@
       </div>
       <div class="box4">
         <select>
-           <option value="2017">2017</option>
-           <option value="2016">2016</option>
-           <option value="2015">2015</option>
-           <option value="2014">2014</option>
+          <option value="2017 I">2017 I</option>
+          <option value="2017 II">2017 II</option>
+          <option value="2016 I">2016 I</option>
+          <option value="2016 II">2016 II</option>
+          <option value="2015 I">2015 I</option>
+          <option value="2015 II">2015 II</option>
+          <option value="2014 I">2014 I</option>
+          <option value="2014 II">2014 II</option>
         </select>
       </div>
       <div class="box5">
