--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </div>
       <div class="box2">
         <ul>
-          <li><input type="checkbox"><p>Santiago de Chile</p></li>
-          <li><input type="checkbox"><p>Lima</p></li>
-          <li><input type="checkbox"><p>Arequipa</p></li>
-          <li><input type="checkbox"><p>Ciudad de México</p></li>
+          <li><input type="checkbox"><a href="#">Santiago de Chile</a></li>
+          <li><input type="checkbox"><a href="#">Lima</a></li>
+          <li><input type="checkbox"><a href="#">Arequipa</a></li>
+          <li><input type="checkbox"><a href="#">Ciudad de México</a></li>
         </ul>
       </div>
 
@@ -34,10 +34,14 @@
       </div>
       <div class="box4">
         <select>
-           <option value="2017">2017</option>
-           <option value="2016">2016</option>
-           <option value="2015">2015</option>
-           <option value="2014">2014</option>
+           <option value="2017 I">2017 I</option>
+           <option value="2017 II">2017 II</option>
+           <option value="2016 I">2016 I</option>
+           <option value="2016 II">2016 II</option>
+           <option value="2015 I">2015 I</option>
+           <option value="2015 II">2015 II</option>
+           <option value="2014 I">2014 I</option>
+           <option value="2014 II">2014 II</option>
         </select>
       </div>
       <div class="box5">
